@@ -1,3 +1,8 @@
+2009-10-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOBasic.c (TclOO_Object_VarName): [Bug 2883857]: Allow
+	the passing of array element names through this method.
+
 2009-07-24  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/self.n (self class): [Bug 2704302]: Add some text to make it
